src/test/deca/context/valid/Obj/cast-compatible.deca
// Description:
//    Cast d'un int en float
//
// Résultat:
//    Succès
//

{
   int a;
   float b;
   (float) (a);
   b = a;
}