src/test/deca/context/invalid/sansObj/geq-binaire-string.deca
// Description:
//          Utilisation de l'opérateur >= avec un int et un string
//
// Résultat:
//Comparaison entre deux membres incompatibles
//
{
    int a = 10;
    boolean b = ("non-nombre" >= a);
}